# python-boilerplate

./: cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: pyproject.toml
