[tool.poetry]
name = "python-boilerplate"
version = "0.1.1"
description = "Python boilerplate contains all the boilerplate needed to create a Python package."
authors = ["Daniel Gonçalves <daniel.gonc@lves.fr>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
tox = "^3.14"
cookiecutter = "^1.4"
pytest-cookies = "^0.4"
alabaster = "^0.7"
watchdog = "^0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
