[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pip = "^19.2"
bump2version = "^0.5"
wheel = "^0.33"
watchdog = "^0.9"
flake8 = "^3.7"
tox = "^3.14"
coverage = "^4.5"
Sphinx = "^1.8"
twine = "^1.14"
{% if cookiecutter.command_line_interface|lower == 'click' -%}
Click = "^7.0"{% endif %}
{% if cookiecutter.use_pytest == 'y' -%}
pytest = "^4.6"
pytest-runner = "^5.1"{% endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
